public/blog/styles/components/PostBody.module.scss
.root {
	line-height: 1.5;
	font-size: larger;
	font-weight: bold;
	color: white;
	
	> :last-child {
		&,
		:last-child {
			margin-bottom: 0;
		}
	}
	
	:not(:last-child) {
		margin-bottom: 16px;
	}
	
	li,
	ul ul,
	ul ol,
	ol ol,
	ol ul {
		margin-bottom: 0;
	}
	
	ul,
	ol {
		padding-left: 2em;
	}
	
	li:not(:first-child) {
		margin-top: 0.25em;
	}
	
	a {
		color: #b2ccd6;
	}
	
	blockquote {
		padding-left: 12px;
		border-left: thick solid white;
	}
	
	pre,
	code {
		background: #202331;
	}
	
	pre {
		padding: 16px 20px;
		border-radius: 8px;
		
		> :last-child {
			display: none;
		}
		
		* {
			margin-bottom: 0;
		}
	}
	
	code {
		padding: 4px 8px;
		color: #f78c6c;
		border-radius: 5px;
	}
	
	img {
		display: block;
		margin: {
			left: auto;
			right: auto;
		}
		border-radius: 8px;
	}
}

